--- a/Fitness Diary.csproj
+++ b/Fitness Diary.csproj
@@ -243,6 +243,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\redmarker.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\map_timer.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
