--- a/Fitness Diary.csproj
+++ b/Fitness Diary.csproj
@@ -70,17 +70,21 @@
     <Compile Include="Activities\LoginActivity.cs" />
     <Compile Include="Activities\RegisterActivity.cs" />
     <Compile Include="Adapter\ViewPagerAdapter.cs" />
+    <Compile Include="Adapter\WorkoutAdapter.cs" />
     <Compile Include="EventListeners\TaskCompletionListener.cs" />
+    <Compile Include="EventListeners\WorkoutListener.cs" />
     <Compile Include="Fragments\CalculatorFragment.cs" />
     <Compile Include="Fragments\CalendarFragment.cs" />
     <Compile Include="Fragments\DietPlannerFragment.cs" />
     <Compile Include="Fragments\HelpFragment.cs" />
     <Compile Include="Fragments\MapFragment.cs" />
+    <Compile Include="Helpers\AppDataHelper.cs" />
     <Compile Include="Helpers\DirectionParser.cs" />
     <Compile Include="Helpers\GeocodingParser.cs" />
     <Compile Include="Helpers\LocationCallbackHelper.cs" />
     <Compile Include="Helpers\MapFunctionHelper.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Models\Workout.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -130,10 +134,19 @@
     <PackageReference Include="Xamarin.Android.Maps.Utils">
       <Version>0.5.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.Annotations">
+      <Version>28.0.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Core.Utils">
       <Version>28.0.0.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
+    <PackageReference Include="Xamarin.Android.Support.v4">
+      <Version>28.0.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.v7.RecyclerView">
+      <Version>28.0.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Volley">
       <Version>1.1.1.1</Version>
     </PackageReference>
@@ -257,6 +270,21 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\map_datasheet.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\workout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\workout_recycler_view.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\workout_row.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
